--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "thorin-store-redis",
   "author": "UNLOQ Systems",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "dependencies": {
-    "redis": "2.6.3"
+    "ioredis": "3.1.4"
   },
   "description": "Thorin.js redis store",
   "main": "index.js",
